--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
         "popper.js": "^1.12",
         "tailwindcss": "^0.6.1",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.0",
+        "@fortawesome/free-solid-svg-icons": "^5.1.0",
+        "@fortawesome/vue-fontawesome": "^0.1.0",
+        "vue-router": "^3.0.1"
     }
 }
