--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.0",
         "@fortawesome/free-solid-svg-icons": "^5.1.0",
         "@fortawesome/vue-fontawesome": "^0.1.0",
+        "ajv": "^6.5.2",
+        "moment": "^2.22.2",
+        "vue-html-editor": "^0.2.1",
         "vue-router": "^3.0.1"
     }
 }
