--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:K4Kwe8MyIgHVc/dYsv0ywDvXurLiBC7KyOsUNUqSIDU=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
 
